staff: Add Cynthia, Maggie, Kate, and Darrick to the staff page, and merge the Contact page.

--- a/staff.html.in
+++ b/staff.html.in
@@ -1,7 +1,6 @@
 	<h1>Teachers</h1>
 
 	<h2>Linda Mae Dennis</h2>
-
 	<p><img src="lindamae.jpg" width="181" height="219" alt="Linda
 Mae Dennis" style="float: left; margin-right: 1em;"/><img src="lindy.jpg" width="100"
 height="300" alt="Linda Mae Dennis age 3" style="float: right; margin-left: 1em;"/>Linda Mae Dennis
@@ -65,29 +64,50 @@ and Lea now teaches the Redmond class on Sunday nights. She also occasionally
 runs a demo group for a very silly fantasy fair in Bonney Lake. Lea and Jim
 have a one year old daughter named Jasmine.</p>
 
-<!--
 	<h1>Musicians</h1>
-	<br>
-	<h2>Andy Imbrie</h2>
-	<table>
-	<tr class="biography"><td><img src="images/andy.jpg" width="200" height="152" alt="Andy Imbrie" class="floatleft"><p>Andy leads the "Reel of Seven" Scottish dance band, and is the music coordinator for the San Francisco Branch of the RSCDS. Reel of Seven has just released their first CD: "Dance for Joy" recorded in 2008 at the Kim McGarrity Memorial Ball at Asilomar.</p>
 
-	<p>Andy began Scottish Country Dancing in Berkeley in 1977 and earned his preliminary pass teacher's certificate in 1984, and one day hopes to find time to train for the full certificate. He began studying classical piano as a child, and started playing for Scottish Country Dancing in 1984 with the encouragement of Kim McGarrity and Barbara McOwen. He plays regularly for dances throughout the US and Canada with various fiddlers, including Deby Benton Grosjean and Calum MacKinnon, and has also played for dance tours and workshops in Scotland, Shetland, Orkney, and New Zealand with fiddler John Taylor. Andy is featured on several albums of SCD music, including "Steppin' Out" and "LIVE" with John Taylor, "March Hare" with Susan Worland, "The San Francisco Collection, Vol. 2" with many local musicians, and "The Devil's Quandary" with Deby Benton Grosjean. He has been on music staff at Pinewoods and was honored to have been invited to teach piano accompaniment at the Valley of the Moon Scottish fiddling school for several years.</p>
+	<h2>Cynthia Soohoo</h2>
+	<p><img src="cynthia.jpg" width="188" height="198" alt="Cynthia Soohoo"
+style="float: left; margin-right: 1em;"/> Cynthia Soohoo, a native of Portland,
+has enjoyed performing and writing musical arrangements in classical and
+popular genres since childhood; but it wasn't until 1997 that a chance
+opportunity to explore Scottish fiddling gave wings to her lifelong attraction
+to Celtic music, a love now also shared by her family.  Eventually
+relinquishing the fiddling to her two passionate fiddler sons, she became the
+pianist-arranger for the family band, which plays for Scottish cultural events
+and Scottish country dancing.</p>
 
-	<p>Andy is married to Sherryl Fawx (also a dancer and musician); they live in Santa Clara, California. In his free time, he works as an aerospace engineer specializing in simulation, guidance, and control design of flight vehicles.</p>
-	</td>
-	</tr>
-	</table>
+	<p>Cynthia is also very active in music outside of the Celtic world,
+maintaining a private piano studio, directing a church orchestra, leading a
+string quartet, teaching violin classes, and performing traditional and
+contemporary music for various occasions.  Cynthia, husband Stephen and their
+two young daughters are enthusiastic Scottish country dancers.</p>
 
-	<p>&nbsp</p>
-	<h2>David Knight</h2>
-	<table>
-	<tr class="biography"><td><img src="images/david-knight.jpg" width="134" height="250" alt="David Knight" class="floatleft"><p>I got into Scottish fiddle through a misunderstanding that arose out of my interest in Scottish punk and alternative bands. It was a happy misunderstanding that got me into Scottish Country Dancing by the age of 15, into teaching Scottish Country Dancing by the age of 21, and getting my preliminary certificate to teach at St. Andrews, Scotland at the Summer School of the Royal Scottish Country Dance Society in 1993.</p>
+	<h2>Maggie Hannahs</h2>
+	<p>Maggie recently moved here from Minneapolis.  She dances with the
+Portland group, and plays her fiddle.</p>
 
-	<p>I have been playing for dance, performance, theater, and for fun since around 1991.</p>
+	<h1>Organizers</h1>
 
-	<p>I have played for dance and performance events in Croatia, France, Scotland, most of the Eastern and some of the Western United States. </p>
-	</td>
-	</tr>
-	</table>
--->
+	<h2>Kate Mintz</h2>
+	<p>Kate studied and danced with the Scottish Country Dance group at
+Western Washington University in Bellingham.  After a few years abroad, she's
+now dancing with the groups in Vancouver, WA and Battle Ground, WA.  In
+addition to organizing this event, she also apparently owns a llama.</p>
+
+	<p>If you have any questions, comments, or wish to request further
+information, please email Kate <a href="mailto:yww2013 at yahoo dot
+com">yww2013 at yahoo dot com</a></p>
+
+	<h2>Darrick Wong</h2>
+	<p>Darrick grew up in Silly Cone Valley and moved to the Portland area
+after college to work on Linux.  It was in Portland where he met the Scottish
+Country Dance group, and has been folk-dancing with them and other local groups
+ever since.  Occasionally he can be found dancing at Irish ceildhs, or
+peer-pressured into going to a Contra dance.  In the past few years, he's
+branched out to dance with other SCD groups on the West Coast, such as San
+Francisco and Seattle.</p>
+
+	<p>If you see a problem with the website, email Darrick: <a
+href="mailto:djwong+yww2013 at djwong dot org">djwong+yww2013 at djwong dot
+org</a></p>
