--- a/staff.html.in
+++ b/staff.html.in
@@ -90,10 +90,10 @@ Portland group, and plays her fiddle.</p>
 	<h1>Organizers</h1>
 
 	<h2>Kate Mintz</h2>
-	<p>Kate studied and danced with the Scottish Country Dance group at
-Western Washington University in Bellingham.  After a few years abroad, she's
-now dancing with the groups in Vancouver, WA and Battle Ground, WA.  In
-addition to organizing this event, she also apparently owns a llama.</p>
+	<p>Kate studied and danced with a Scottish Country Dance group in
+college.  She now dances with the groups in Vancouver, WA and Battle Ground,
+WA.  In addition to organizing this event, she also apparently owns a
+llama.</p>
 
 	<p>If you have any questions, comments, or wish to request further
 information, please email Kate <a href="mailto:yww2013 at yahoo dot
