ball/ceildh: Minor fixes to the driving directions.

--- a/ball.html.in.in
+++ b/ball.html.in.in
@@ -27,8 +27,12 @@ Fourth Plain Boulevard by driving north on "F" Street and then driving west on
 East 27th Street. The lot is posted. There is no parking on Fourth Plain.</p>
 
 	<p><b>I-5 Southbound Directions:</b> Take exit 1D, keeping right onto
-Fourth Plain Blvd Westbound.  At the first light, turn left onto "F" Street,
+Fourth Plain Blvd Westbound.  At the first light, turn right onto "F" Street,
 then turn left at the first intersection onto 27th Street.  The parking lot is
 straight ahead.</p>
 
-	<p><b>I-5 Northbound Directions:</b> Take exit 1C/1D keeping left and follow the signs to Fourth Plain Blvd.  Turn left onto Fourth Plain Blvd. Westbound.  At the second light, turn right onto “F” Street, and turn left at the first intersection onto 27th Street.  The parking lot is straight ahead.</p>
+	<p><b>I-5 Northbound Directions:</b> Take exit 1C/1D keeping left and
+follow the signs to Fourth Plain Blvd.  Turn left onto Fourth Plain Blvd.
+Westbound.  At the second light, turn right onto “F” Street, and turn left at
+the first intersection onto 27th Street.  The parking lot is straight
+ahead.</p>
