index: News about recent updates.

--- a/index.html.in
+++ b/index.html.in
@@ -1,7 +1,10 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
+	<p><b>11 Apr 2013:</b> The ceildh program has been shortened somewhat,
+and a crib for the Pride of Erin waltz (at the ball) has been updated.</p>
+
 	<p><b>4 Apr 2013:</b> We have a <a href="ceildh.html">ceildh</a>
-program for you to peruse!
+program for you to peruse!</p>
 
 	<p><b>1 Apr 2013:</b> See biking instructions on the travel page!</p>
 
