--- a/staff.html.in
+++ b/staff.html.in
@@ -92,8 +92,8 @@ Portland group, and plays her fiddle.</p>
 	<h2>Kate Mintz</h2>
 	<p>Kate studied and danced with a Scottish Country Dance group in
 college.  She now dances with the groups in Vancouver, WA and Battle Ground,
-WA.  In addition to organizing this event, she also apparently owns a
-llama.</p>
+WA.  In her spare time, Kate teaches llamas to deliver packages and guide the
+blind.</p>
 
 	<p>If you have any questions, comments, or wish to request further
 information, please email Kate <a href="mailto:yww2013 at yahoo dot
