staff: Fix 80char limit.

--- a/staff.html.in
+++ b/staff.html.in
@@ -1,16 +1,16 @@
 	<h1>Teachers</h1>
 
 	<h2>Linda Mae Dennis</h2>
-	<p><img src="lindamae.jpg" width="181" height="219" alt="Linda
-Mae Dennis" style="float: left; margin-right: 1em;"/><img src="lindy.jpg" width="100"
-height="300" alt="Linda Mae Dennis age 3" style="float: right; margin-left: 1em;"/>Linda Mae Dennis
-was born and raised in Alberta, Canada, where she first ventured into Tap at
-age five, and Irish Dancing at age seven. After family moves to Southern
-California and then Houston, Texas, (where she got a largely unused degree in
-Biology) she started her adult life in Austin, Texas. By taking every dance
-class she could find, and after a short stint at Motorola, she became a
-professional Tap dancer in 1983, and toured with Austin on Tap Dance Theater
-for several years.</p>
+	<p><img src="lindamae.jpg" width="181" height="219" alt="Linda Mae
+Dennis" style="float: left; margin-right: 1em;"/><img src="lindy.jpg"
+width="100" height="300" alt="Linda Mae Dennis age 3" style="float: right;
+margin-left: 1em;"/>Linda Mae Dennis was born and raised in Alberta, Canada,
+where she first ventured into Tap at age five, and Irish Dancing at age seven.
+After family moves to Southern California and then Houston, Texas, (where she
+got a largely unused degree in Biology) she started her adult life in Austin,
+Texas. By taking every dance class she could find, and after a short stint at
+Motorola, she became a professional Tap dancer in 1983, and toured with Austin
+on Tap Dance Theater for several years.</p>
 
 	<p>When she retired from touring, she continued to Tap with the "in
 town" company, as well as to teach ballet, tap, jazz, and gymnastics to
