--- a/staff.html.in
+++ b/staff.html.in
@@ -98,8 +98,8 @@ com">yww2013 at yahoo dot com</a></p>
 	<p>Darrick grew up in Silly Cone Valley and moved to the Portland area
 after college to work on Linux.  It was in Portland where he met the Scottish
 Country Dance group, and has been folk-dancing with them and other local groups
-ever since.  Occasionally he can be found dancing at Irish ceildhs, or
-peer-pressured into going to a Contra dance.  In the past few years, he's
+ever since.  Occasionally he can be found dancing at Irish cèilidhs, or
+arm-twisted into going to a Contra dance.  In the past few years, he's
 branched out to dance with other SCD groups on the West Coast, such as San
 Francisco and Seattle.</p>
 
