--- a/ceilidh.html.in.in
+++ b/ceilidh.html.in.in
@@ -11,7 +11,7 @@ participants, as well as several Scottish Country Dances.</p>
 	<h2>Program:</h2>
 	<p class="crib_dropdown">Click on the name of a dance to see its
 crib sheet.  The complete crib will print on your printer.</p>
-CRIB:ceildh.txt
+CRIB:ceilidh.txt
 
 	<h2>Directions:</h2>
 	<p>The ceildh will be at The Academy Building, 400 E. Evergreen Blvd., Vancouver, Wash:
