--- a/index.html.in
+++ b/index.html.in
@@ -1,9 +1,12 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
-	<p><b>11 Apr 2013:</b> The ceildh program has been shortened somewhat,
+	<p><b>18 Apr 2013:</b> One of the egregious spelling errors has been
+corrected.  Those responsible have been sacked.</p>
+
+	<p><b>11 Apr 2013:</b> The cèilidh program has been shortened somewhat,
 and a crib for the Pride of Erin waltz (at the ball) has been updated.</p>
 
-	<p><b>4 Apr 2013:</b> We have a <a href="ceildh.html">ceildh</a>
+	<p><b>4 Apr 2013:</b> We have a <a href="ceilidh.html">cèilidh</a>
 program for you to peruse!</p>
 
 	<p><b>1 Apr 2013:</b> See biking instructions on the travel page!</p>
