--- a/schedule.html.in
+++ b/schedule.html.in
@@ -10,7 +10,7 @@ invited, and a combined class on Sunday morning.</p>
 	<table>
 		<tr>
 			<td style="padding-right: 2em;">7:00 pm - 10:00 pm</td>
-			<td><a href="ceildh.html">Welcome Ceildh</a> and check-in at the Academy Building</td>
+			<td><a href="ceilidh.html">Welcome Cèilidh</a> and check-in at the Academy Building</td>
 		</tr>
 	</table>
 
