Continue fixing ceilidh misspellings.

--- a/index.html.in
+++ b/index.html.in
@@ -1,7 +1,7 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
-	<p><b>18 Apr 2013:</b> One of the egregious spelling errors has been
-corrected.  Those responsible have been sacked.</p>
+	<p><b>18 Apr 2013:</b> An egregious spelling error has been corrected.
+Those responsible have been sacked.</p>
 
 	<p><b>11 Apr 2013:</b> The cèilidh program has been shortened somewhat,
 and a crib for the Pride of Erin waltz (at the ball) has been updated.</p>
