--- a/ceilidh.html.in.in
+++ b/ceilidh.html.in.in
@@ -1,6 +1,6 @@
-	<h1>Ceildh</h1>
+	<h1>Cèilidh</h1>
 
-	<p>Youth Weekend West begins with a ceildh on Friday, May 3rd at 7:00pm
+	<p>Youth Weekend West begins with a cèilidh on Friday, May 3rd at 7:00pm
 at the Academy Building (marker (B) on the <a href="schedule.html">schedule</a>
 page).  We will have a number of acts contributed by other Youth Weekend West
 participants, as well as several Scottish Country Dances.</p>
@@ -14,7 +14,7 @@ crib sheet.  The complete crib will print on your printer.</p>
 CRIB:ceilidh.txt
 
 	<h2>Directions:</h2>
-	<p>The ceildh will be at The Academy Building, 400 E. Evergreen Blvd., Vancouver, Wash:
+	<p>The cèilidh will be at The Academy Building, 400 E. Evergreen Blvd., Vancouver, Wash:
 <!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=The+Academy+Building,+400+E.+Evergreen+Blvd.,+Vancouver,+Wash.&amp;aq=&amp;sll=37.508136,-122.213927&amp;sspn=0.1822,0.398254&amp;ie=UTF8&amp;hq=The+Academy+Building,+400+E.+Evergreen+Blvd.,+Vancouver,+Wash.&amp;hnear=&amp;radius=15000&amp;t=m&amp;ll=45.629491,-122.668222&amp;spn=0.071946,0.071946&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="460" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=The+Academy+Building,+400+E.+Evergreen+Blvd.,+Vancouver,+Wash.&amp;aq=&amp;sll=37.508136,-122.213927&amp;sspn=0.1822,0.398254&amp;ie=UTF8&amp;hq=The+Academy+Building,+400+E.+Evergreen+Blvd.,+Vancouver,+Wash.&amp;hnear=&amp;radius=15000&amp;t=m&amp;ll=45.629491,-122.668222&amp;spn=0.071946,0.071946&amp;output=embed"></iframe><![endif]-->
 <br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=The+Academy+Building,+400+E.+Evergreen+Blvd.,+Vancouver,+Wash.&amp;aq=&amp;sll=37.508136,-122.213927&amp;sspn=0.1822,0.398254&amp;ie=UTF8&amp;hq=The+Academy+Building,+400+E.+Evergreen+Blvd.,+Vancouver,+Wash.&amp;hnear=&amp;radius=15000&amp;t=m&amp;ll=45.629491,-122.668222&amp;spn=0.071946,0.071946" style="color:#0000FF;text-align:left">View Larger Map</a></small></p>
 
@@ -26,12 +26,12 @@ to the freeway.</p>
 E. 15th Street.  At the first light, turn left onto "C" Street.  Drive south
 for three blocks; at E. 12th Street, turn left.  Turn right at the first
 driveway into the Academy.  Make an immediate left turn and drive 400 feet
-straight past the tall chimney.  The ceildh will be in the small brick building
+straight past the tall chimney.  The cèilidh will be in the small brick building
 to your right, just south of the chimney.</p>
 
 	<p><b>I-5 Northbound Direction:</b> Take exit 1B to C Street.  Keep to
 the right after the overpass.  Drive north on C street, and at the fourth
 intersection, turn right onto E. 12th Street.  Turn right at the first driveway
 into the Academy.  Make an immediate left turn and drive 400 feet straight past
-the tall chimney.  The ceildh will be in the small brick building to your
+the tall chimney.  The cèilidh will be in the small brick building to your
 right, just south of the chimney.</p>
