schedule: Fix another one of the "ceilidhs".

--- a/schedule.html.in
+++ b/schedule.html.in
@@ -2,7 +2,7 @@
 
 	<p>Youth Weekend West presents a varied and entertaining schedule of
 events for the weekend, including Scottish Country dancing classes, elective
-dance classes for the adventurous, a Ceilidh on Friday night, a "Dancing Among
+dance classes for the adventurous, a cèilidh on Friday night, a "Dancing Among
 the Stars" Ball on Saturday to which Scottish Country Dancers of all ages are
 invited, and a combined class on Sunday morning.</p>
 
