afterparty: Update with Lizzie's grandmother's house.

--- a/afterparty.html.in
+++ b/afterparty.html.in
@@ -2,14 +2,14 @@
 
 	<p>The fun doesn't stop after the ball on Saturday!  Once the dancing
 stops and the music ends, join us for more music, treats, and possibly even
-dancing at one of our two after parties!  Lizzie Wratten's grandmother
-[unconfirmed] has been gracious enough to let the Youth Weekend West
-participants take over her farmhouse out in the town of Brush Prairie, and
-Theresa Ryan will be welcoming Dinner Dancers at her house on the outskirts of
-Vancouver.</p>
+dancing at one of our two after parties!  Lizzie Wratten's grandmother has been
+gracious enough to let the Youth Weekend West participants take over her
+farmhouse near the town of Brush Prairie, and Theresa Ryan will be welcoming
+Dinner Dancers at her house on the outskirts of Vancouver.</p>
 
-	<p>Lizzie Wratten's grandmother's house is ... somewhere in Brush Prairie:
-<!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=FTdquAIdZj6w-CmZEDERNK-VVDGIuqr9O0kzHA%3BFR7UuQIdyhay-CkHuBFjY7GVVDFSS45cH_eJAg&amp;q=426+E+4th+Plain+Blvd,+Vancouver,+Wash+to+Brush+Prairie,+WA&amp;aq=0&amp;oq=426+E.+Fourth+Plain+Blvd.,+Vancouver,+Wash+to+Brush+Pr&amp;sll=45.543408,-122.654422&amp;sspn=0.321724,0.796509&amp;t=m&amp;ie=UTF8&amp;saddr=426+E+4th+Plain+Blvd,+Vancouver,+Wash&amp;daddr=Brush+Prairie,+WA&amp;ll=45.685813,-122.606958&amp;spn=0.094285,0.120921&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="425" class="map" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=FTdquAIdZj6w-CmZEDERNK-VVDGIuqr9O0kzHA%3BFR7UuQIdyhay-CkHuBFjY7GVVDFSS45cH_eJAg&amp;q=426+E+4th+Plain+Blvd,+Vancouver,+Wash+to+Brush+Prairie,+WA&amp;aq=0&amp;oq=426+E.+Fourth+Plain+Blvd.,+Vancouver,+Wash+to+Brush+Pr&amp;sll=45.543408,-122.654422&amp;sspn=0.321724,0.796509&amp;t=m&amp;ie=UTF8&amp;saddr=426+E+4th+Plain+Blvd,+Vancouver,+Wash&amp;daddr=Brush+Prairie,+WA&amp;ll=45.685813,-122.606958&amp;spn=0.094285,0.120921&amp;output=embed"></iframe><![endif]-->
+	<p>Lizzie Wratten's grandmother's house is 13007 NE 110th Ave.,
+Vancouver, Wash.:
+<!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=FeBruAIdHD-w-CnXfAYQNK-VVDGrdH33miNo1w%3BFXWSuQIdhuax-CkTTyb7nrGVVDF_gWgbBoIewA&amp;q=426+E+4th+Plain+Blvd,+Vancouver,+WA+to+13007+NE+110th+Ave,+Vancouver,+WA&amp;aq=&amp;sll=45.677881,-122.609825&amp;sspn=0.160477,0.398254&amp;ie=UTF8&amp;t=m&amp;saddr=426+E+4th+Plain+Blvd,+Vancouver,+WA&amp;daddr=13007+NE+110th+Ave,+Vancouver,+WA&amp;ll=45.677866,-122.609844&amp;spn=0.078391,0.114791&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="425" class="map" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=FeBruAIdHD-w-CnXfAYQNK-VVDGrdH33miNo1w%3BFXWSuQIdhuax-CkTTyb7nrGVVDF_gWgbBoIewA&amp;q=426+E+4th+Plain+Blvd,+Vancouver,+WA+to+13007+NE+110th+Ave,+Vancouver,+WA&amp;aq=&amp;sll=45.677881,-122.609825&amp;sspn=0.160477,0.398254&amp;ie=UTF8&amp;t=m&amp;saddr=426+E+4th+Plain+Blvd,+Vancouver,+WA&amp;daddr=13007+NE+110th+Ave,+Vancouver,+WA&amp;ll=45.677866,-122.609844&amp;spn=0.078391,0.114791&amp;output=embed"></iframe><![endif]-->
 <br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=FTdquAIdZj6w-CmZEDERNK-VVDGIuqr9O0kzHA%3BFR7UuQIdyhay-CkHuBFjY7GVVDFSS45cH_eJAg&amp;q=426+E+4th+Plain+Blvd,+Vancouver,+Wash+to+Brush+Prairie,+WA&amp;aq=0&amp;oq=426+E.+Fourth+Plain+Blvd.,+Vancouver,+Wash+to+Brush+Pr&amp;sll=45.543408,-122.654422&amp;sspn=0.321724,0.796509&amp;t=m&amp;ie=UTF8&amp;saddr=426+E+4th+Plain+Blvd,+Vancouver,+Wash&amp;daddr=Brush+Prairie,+WA&amp;ll=45.685813,-122.606958&amp;spn=0.094285,0.120921" style="color:#0000FF;text-align:left">View Larger Map</a></small></p>
 
 	<ol>
@@ -22,8 +22,10 @@ towards "F" St.</li>
 East.  Keep right at the fork to continue onto WA-500, heading east.</li>
 	<li>Continue east on WA-500 past I-205, as WA-500 becomes WA-503 (and
 NE 117th Ave.) and heads north.</li>
-	<li>Follow WA-503 north to Brush Prairie.  Look for the fireworks. [no,
-not done yet]</li>
+	<li>Continue through the light at NE 119th St.  0.6 miles later, turn
+left on NE 131st St.</li>
+	<li>Turn left at the first street, onto NE 110th Ave.  The house is the
+second one on the left.</li>
 	</ol>
 
 	<p>Theresa Ryan's house is at 12205 NE 101st St, Vancouver, WA:
