afterparty: Tweak the wording a bit more...

--- a/afterparty.html.in
+++ b/afterparty.html.in
@@ -1,11 +1,11 @@
 	<h1>After Party</h1>
 
-	<p>The fun doesn't stop after the ball on Saturday!  Once the dancing
-stops and the music ends, join us for more music, treats, and possibly even
-dancing at one of our two after parties!  Lizzie Wratten's grandmother has been
-gracious enough to let the Youth Weekend West participants take over her
-farmhouse near the town of Brush Prairie, and Theresa Ryan will be welcoming
-Dinner Dancers at her house on the outskirts of Vancouver.</p>
+	<p>The fun doesn't stop after the ball on Saturday!  Join us for more
+music, treats, and possibly even dancing at one of our two after parties!
+Lizzie Wratten's grandmother has been gracious enough to let the Youth Weekend
+West participants take over her farmhouse near the town of Brush Prairie, and
+Theresa Ryan will be welcoming Dinner Dancers at her house on the outskirts of
+Vancouver.</p>
 
 	<p>Lizzie Wratten's grandmother's house is 13007 NE 110th Ave.,
 Vancouver, Wash.:
