afterparty: Note BYOB.

--- a/afterparty.html.in
+++ b/afterparty.html.in
@@ -7,6 +7,9 @@ West participants take over her farmhouse near the town of Brush Prairie, and
 Theresa Ryan will be welcoming Dinner Dancers at her house on the outskirts of
 Vancouver.</p>
 
+	<p>Our hosts request that those wishing to consume adult beverages
+should bring their own.</p>
+
 	<p>Lizzie Wratten's grandmother's house is 13007 NE 110th Ave.,
 Vancouver, Wash.:
 <!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=FeBruAIdHD-w-CnXfAYQNK-VVDGrdH33miNo1w%3BFXWSuQIdhuax-CkTTyb7nrGVVDF_gWgbBoIewA&amp;q=426+E+4th+Plain+Blvd,+Vancouver,+WA+to+13007+NE+110th+Ave,+Vancouver,+WA&amp;aq=&amp;sll=45.677881,-122.609825&amp;sspn=0.160477,0.398254&amp;ie=UTF8&amp;t=m&amp;saddr=426+E+4th+Plain+Blvd,+Vancouver,+WA&amp;daddr=13007+NE+110th+Ave,+Vancouver,+WA&amp;ll=45.677866,-122.609844&amp;spn=0.078391,0.114791&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="425" class="map" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=FeBruAIdHD-w-CnXfAYQNK-VVDGrdH33miNo1w%3BFXWSuQIdhuax-CkTTyb7nrGVVDF_gWgbBoIewA&amp;q=426+E+4th+Plain+Blvd,+Vancouver,+WA+to+13007+NE+110th+Ave,+Vancouver,+WA&amp;aq=&amp;sll=45.677881,-122.609825&amp;sspn=0.160477,0.398254&amp;ie=UTF8&amp;t=m&amp;saddr=426+E+4th+Plain+Blvd,+Vancouver,+WA&amp;daddr=13007+NE+110th+Ave,+Vancouver,+WA&amp;ll=45.677866,-122.609844&amp;spn=0.078391,0.114791&amp;output=embed"></iframe><![endif]-->
