schedule: Add the afterparty.

--- a/schedule.html.in
+++ b/schedule.html.in
@@ -10,7 +10,7 @@ invited, and a combined class on Sunday morning.</p>
 	<table>
 		<tr>
 			<td style="padding-right: 2em;">7:00 pm - 10:00 pm</td>
-			<td><a href="ceilidh.html">Welcome Cèilidh</a> and check-in at the Academy Building</td>
+			<td><a href="ceilidh.html">Welcome cèilidh</a> and check-in at the Academy Building</td>
 		</tr>
 	</table>
 
@@ -48,6 +48,10 @@ invited, and a combined class on Sunday morning.</p>
 		<tr>
 			<td>7:15pm - 11:30pm</td>
 			<td><a href="ball.html">Ball at St. Luke's</a> (open to all).  Grand march is at 7:15.</td>
+		</tr>
+		<tr>
+			<td>Midnight -</td>
+			<td>Afterparty!  Please see the insert in your welcome packet for details.</td>
 		</tr>
 	</table>
 
