index: Note that registration closed on the news feed.

--- a/index.html.in
+++ b/index.html.in
@@ -1,5 +1,7 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
+	<p><b>24 Apr 2013:</b> Registration has closed at 4 full sets!</p>
+
 	<p><b>18 Apr 2013:</b> An egregious spelling error has been corrected.
 Those responsible have been sacked.</p>
 
