various: Kate -> Kathlleeeeeeeeeen.

--- a/staff.html.in
+++ b/staff.html.in
@@ -89,9 +89,9 @@ Portland group, and plays her fiddle.</p>
 
 	<h1>Organizers</h1>
 
-	<h2>Kate Mintz</h2>
+	<h2>Kathlleen Mintz</h2>
 	<p>If you have any questions, comments, or wish to request further
-information, please email Kate <a href="mailto:yww2013 at yahoo dot
+information, please email Kathlleen <a href="mailto:yww2013 at yahoo dot
 com">yww2013 at yahoo dot com</a></p>
 
 	<h2>Darrick Wong</h2>
