--- a/contact.html.in
+++ b/contact.html.in
@@ -1,6 +1,6 @@
 	<h1>Contact</h1>
 	<p>If you have any questions, comments, or wish to request further
-information, please contact Kate Mintz:</p>
+information, please contact Kathlleen Mintz:</p>
 	<p><a href="mailto:yww2013 at yahoo dot com">yww2013 at yahoo dot com</a></p>
 
 	<p>If you see a problem with the website, contact Darrick Wong:</p>
