feedback: Tweak the wording a bit to make it less awkward.

--- a/feedback.html.in
+++ b/feedback.html.in
@@ -1,10 +1,10 @@
 	<h1>Feedback</h1>
 
 	<p>We hope that you enjoyed Youth Weekend West and will join us next
-year!  If you have any comments about our event, suggestions for next year,
-please let us know on this comment card.  If you simply thought it was a good
-event, we'd like to hear that too!  You can give this card to any of the event
-staff, or email your thoughts to yww2013@yahoo.com.</p>
+year!  If you have any comments about our event, suggestions for next year, or
+anything else that you'd like to express, please let us know on this comment
+card.  You can give this card to any of the event staff, or email your thoughts
+to yww2013@yahoo.com.</p>
 
 	<p>Did you enjoy the cèilidh?<br /><br /><br /></p>
 
