various: Hide map links when printing, and remove the blue/underline context from all links when printing.

--- a/ball.html.in.in
+++ b/ball.html.in.in
@@ -21,7 +21,7 @@ CRIB:ball.txt
 	<p>The ball will be at St. Luke's Episcopal Church, 426 E. Fourth Plain
 Blvd., Vancouver, Wash:
 <!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?client=ubuntu&amp;channel=fs&amp;oe=utf-8&amp;q=426+E.+Fourth+Plain+Blvd.,+Vancouver,+WA&amp;ie=UTF8&amp;hq=&amp;hnear=426+E+4th+Plain+Blvd,+Vancouver,+Washington+98663&amp;gl=us&amp;t=m&amp;z=14&amp;ll=45.640247,-122.667418&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="425" class="map" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?client=ubuntu&amp;channel=fs&amp;oe=utf-8&amp;q=426+E.+Fourth+Plain+Blvd.,+Vancouver,+WA&amp;ie=UTF8&amp;hq=&amp;hnear=426+E+4th+Plain+Blvd,+Vancouver,+Washington+98663&amp;gl=us&amp;t=m&amp;z=14&amp;ll=45.640247,-122.667418&amp;output=embed"></iframe><![endif]-->
-<br /><small><a href="https://maps.google.com/maps?client=ubuntu&amp;channel=fs&amp;oe=utf-8&amp;q=426+E.+Fourth+Plain+Blvd.,+Vancouver,+WA&amp;ie=UTF8&amp;hq=&amp;hnear=426+E+4th+Plain+Blvd,+Vancouver,+Washington+98663&amp;gl=us&amp;t=m&amp;z=14&amp;ll=45.640247,-122.667418&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small></p>
+<br /><small><a href="https://maps.google.com/maps?client=ubuntu&amp;channel=fs&amp;oe=utf-8&amp;q=426+E.+Fourth+Plain+Blvd.,+Vancouver,+WA&amp;ie=UTF8&amp;hq=&amp;hnear=426+E+4th+Plain+Blvd,+Vancouver,+Washington+98663&amp;gl=us&amp;t=m&amp;z=14&amp;ll=45.640247,-122.667418&amp;source=embed" style="color:#0000FF;text-align:left" class="maplink">View Larger Map</a></small></p>
 
 	<p>St. Luke's is west of Interstate 5 on E. Fourth Plain Boulevard,
 just 1.3 miles north of the Columbia River. The parking lot is reached from
