various: Drop the 'West' part of the name.

--- a/ball.html.in.in
+++ b/ball.html.in.in
@@ -1,11 +1,11 @@
 	<h1>Ball</h1>
 
-	<p>Youth Weekend West participants are invited to join the RSCDS
+	<p>Youth Weekend participants are invited to join the RSCDS
 Southwest Washington State Branch's annual dinner dance.  Taking place on
 Saturday, May 4th at St. Luke's Episcopal Church, this year's theme is "Dance
 Among the Stars."  There will be a catered dinner at 6:00pm and the Grand March
 will be at 7:15pm.  Admittance to the Dinner Dance is included with Youth
-Weekend West registration; you do not need to pay or register separately for
+Weekend registration; you do not need to pay or register separately for
 the two events.</p>
 
 	<h2>Musicians:</h2>
