--- a/ceilidh.html.in.in
+++ b/ceilidh.html.in.in
@@ -1,8 +1,8 @@
 	<h1>Cèilidh</h1>
 
-	<p>Youth Weekend West begins with a cèilidh on Friday, May 3rd at 7:00pm
+	<p>Youth Weekend begins with a cèilidh on Friday, May 3rd at 7:00pm
 at the Academy Building (marker (B) on the <a href="schedule.html">schedule</a>
-page).  We will have a number of acts contributed by other Youth Weekend West
+page).  We will have a number of acts contributed by other Youth Weekend
 participants, as well as several Scottish Country Dances.</p>
 
 	<h2>Musicians:</h2>
