--- a/feedback.html.in
+++ b/feedback.html.in
@@ -1,6 +1,6 @@
 	<h1>Feedback</h1>
 
-	<p>We hope that you enjoyed Youth Weekend West and will join us next
+	<p>We hope that you enjoyed Youth Weekend and will join us next
 year!  If you have any comments about our event, suggestions for next year, or
 anything else that you'd like to express, please let us know on this comment
 card.  You can give this card to any of the event staff, or email your thoughts
