--- a/history.html.in
+++ b/history.html.in
@@ -1,6 +1,6 @@
 	<h1>History</h1>
 
-	<p>Youth Weekend West was started in 2003 by a group of young dancers
+	<p>Youth Weekend was started in 2003 by a group of young dancers
 from British Columbia.  It is designed to be an intense and fun weekend of
 Scottish dance, where dancers can be exposed to unfamiliar and tricky dances,
 refine their technique, and try things they haven't already done.  The weekend
