--- a/index.html.in
+++ b/index.html.in
@@ -34,7 +34,7 @@ link to a map with bicycle routes.</p>
 musicians have been selected, venues have been found, and a rudimentary
 schedule have appeared on the website!</p>
 
-	<p><b>29 Nov 2012:</b> The next Youth Weekend West will be <strong>May
+	<p><b>29 Nov 2012:</b> The next Youth Weekend will be <strong>May
 3-5, 2013</strong> in Vancouver, Wash.  Please stay tuned for more details as
 they come available.  Like us on <a
 href="http://www.facebook.com/events/479641348754864/">Facebook</a>!</p>
