--- a/register.html.in
+++ b/register.html.in
@@ -1,4 +1,4 @@
 	<h1>Register!</h1>
 
-	<p>We are sorry, but Youth Weekend West has sold out.  If you've missed
+	<p>We are sorry, but Youth Weekend has sold out.  If you've missed
 out, we hope to see you in 2014.  Otherwise, we'll see you May 3rd!</p>
