--- a/schedule.html.in
+++ b/schedule.html.in
@@ -1,6 +1,6 @@
 	<h1>Schedule of Events</h1>
 
-	<p>Youth Weekend West presents a varied and entertaining schedule of
+	<p>Youth Weekend presents a varied and entertaining schedule of
 events for the weekend, including Scottish Country dancing classes, elective
 dance classes for the adventurous, a cèilidh on Friday night, a "Dancing Among
 the Stars" Ball on Saturday to which Scottish Country Dancers of all ages are
@@ -65,7 +65,7 @@ invited, and a combined class on Sunday morning.</p>
 	</table>
 
 	<h2>Locations</h2>
-	<p>This year's Youth Weekend West classes will be held in three venues,
+	<p>This year's Youth Weekend classes will be held in three venues,
 (A), (B), and (C).  The hotel is located at marker (D), and the Amtrak station
 is at marker (E).  The distance between points (A) and (C) is about 3/4th of a
 mile, as the crow flies.  All points are convenient to Interstate 5.</p>
