--- a/travel.html.in
+++ b/travel.html.in
@@ -1,8 +1,8 @@
 	<h1>Travelling</h1>
-	<p>All you need to know about getting to Youth Weekend West!</p>
+	<p>All you need to know about getting to Youth Weekend!</p>
 
 	<h2>Locations</h2>
-	<p>This year's Youth Weekend West classes will be held in three venues,
+	<p>This year's Youth Weekend classes will be held in three venues,
 (A), (B), and (C).  The hotel is located at marker (D), and the Amtrak station
 is at marker (E).  The distance between points (A) and (C) is about 3/4th of a
 mile, as the crow flies.  All points are convenient to Interstate 5.</p>
@@ -105,9 +105,9 @@ the public transit section.</p>
 	<p>There is an (unpleasant) shared bike/pedestrian path along the
 Interstate 5 bridge between Portland and Vancouver.  If you're not already
 familiar with biking around Vancouver and intend to ride your bicycle to Youth
-Weekend West, please contact Darrick for bicycle maps and route
-recommendations.  Here's what it looks like to ride from his house in SE
-Portland to downtown Vancouver:</p>
+Weekend, please contact Darrick for bicycle maps and route recommendations.
+Here's what it looks like to ride from his house in SE Portland to downtown
+Vancouver:</p>
 
 	<!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=http:%2F%2Fyouthweekendwest.com%2Fbike.kml&amp;aq=&amp;sll=44.145447,-120.583402&amp;sspn=6.41726,16.259766&amp;ie=UTF8&amp;ll=45.59737,-122.6159&amp;spn=0.085655,0.18744&amp;t=m&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="460" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=http:%2F%2Fyouthweekendwest.com%2Fbike.kml&amp;aq=&amp;sll=44.145447,-120.583402&amp;sspn=6.41726,16.259766&amp;ie=UTF8&amp;ll=45.59737,-122.6159&amp;spn=0.085655,0.18744&amp;t=m&amp;output=embed"></iframe><![endif]-->
 <br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=http:%2F%2Fyouthweekendwest.com%2Fbike.kml&amp;aq=&amp;sll=44.145447,-120.583402&amp;sspn=6.41726,16.259766&amp;ie=UTF8&amp;ll=45.59737,-122.6159&amp;spn=0.085655,0.18744&amp;t=m" style="color:#0000FF;text-align:left" class="maplink">View Larger Map</a></small>
