various: Wipe up some minor errors

--- a/ceilidh.html.in.in
+++ b/ceilidh.html.in.in
@@ -1,7 +1,7 @@
 	<h1>Cèilidh</h1>
 
 	<p>Youth Weekend begins with a cèilidh on Friday, May 3rd at 7:00pm
-at the Academy Building (marker (B) on the <a href="schedule.html">schedule</a>
+at the Academy Building (marker (C) on the <a href="schedule.html">schedule</a>
 page).  We will have a number of acts contributed by other Youth Weekend
 participants, as well as several Scottish Country Dances.</p>
 
