--- a/schedule.html.in
+++ b/schedule.html.in
@@ -27,7 +27,7 @@ invited, and a combined class on Sunday morning.</p>
 		</tr>
 		<tr>
 			<td style="padding-right: 2em;">10:45am - 11:45am</td>
-			<td><a href="classes.html">Classes</a> (part II, Academy building or St. Luke's)</td>
+			<td><a href="classes.html">Classes</a> (part II, Academy Building or St. Luke's)</td>
 		</tr>
 		<tr>
 			<td>12:00pm - 1:00pm</td>
