various: Minor schedule tweaks for tomorrow!

--- a/schedule.html.in
+++ b/schedule.html.in
@@ -9,6 +9,10 @@ invited, and a combined class on Sunday morning.</p>
 	<h2>Friday, May 3rd, 2013</h2>
 	<table>
 		<tr>
+			<td style="padding-right: 2em;">6:30 pm - 7:00 pm</td>
+			<td>Early check-in at the Academy Building</td>
+		</tr>
+		<tr>
 			<td style="padding-right: 2em;">7:00 pm - 10:00 pm</td>
 			<td><a href="ceilidh.html">Welcome cèilidh</a> and check-in at the Academy Building</td>
 		</tr>
