index: Date update!

--- a/index.html.in
+++ b/index.html.in
@@ -1,4 +1,4 @@
-	<h1>The 11th workshop and ball are tomorrow!</h1>
+	<h1>The 11th workshop and ball start today!</h1>
 
 	<p><b>24 Apr 2013:</b> Registration has closed at 4 full sets!</p>
 
