--- a/index.html.in
+++ b/index.html.in
@@ -1,4 +1,9 @@
-	<h1>The 11th workshop and ball start today!</h1>
+	<h1>The 11th workshop and ball were a smashing success!</h1>
+
+	<img src="group_pic.jpg" width="757" height="361" alt="Group Photo, 2013"/>
+
+	<p>Thank you all for coming!  We really enjoyed dancing with everyone
+who came!  Here's a photograph from the ball.</p>
 
 	<p><b>24 Apr 2013:</b> Registration has closed at 4 full sets!</p>
 
