Minor tweaks to reflect what we danced.

--- a/index.html.in
+++ b/index.html.in
@@ -5,6 +5,11 @@
 	<p>Thank you all for coming!  We really enjoyed dancing with everyone
 who came!  Here's a photograph from the ball.</p>
 
+	<p><b>5 May 2013:</b> We had a fabulous weekend!  The crib of
+<i>Farewell to Chandi McCracken</i> has been updated to reflect what we danced,
+which was a minor tweak suggested by Don Gertz.  <i>Unstoppable Kate</i>, which
+we danced during Sunday class, has been re-added to the ceilidh page.</p>
+
 	<p><b>24 Apr 2013:</b> Registration has closed at 4 full sets!</p>
 
 	<p><b>18 Apr 2013:</b> An egregious spelling error has been corrected.
