index: Tweak the photo caption a bit.

--- a/index.html.in
+++ b/index.html.in
@@ -3,7 +3,7 @@
 	<img src="group_pic.jpg" width="757" height="361" alt="Group Photo, 2013"/>
 
 	<p>Thank you all for coming!  We really enjoyed dancing with everyone
-who came!  Here's a photograph from the ball.</p>
+who came!  Here's a photograph (courtesy of Jennifer Seelye) from the ball.</p>
 
 	<p><b>5 May 2013:</b> We had a fabulous weekend!  The crib of
 <i>Farewell to Chandi McCracken</i> has been updated to reflect what we danced,
