--- a/register.html.in
+++ b/register.html.in
@@ -1,10 +1,3 @@
 	<h1>Register!</h1>
 
-	<p>We are sorry, but Youth Weekend has sold out.  If you've missed
-out, we hope to see you in 2014.  Otherwise, we'll see you May 3rd!</p>
-
-	<p>There's still room for more at the <a
-href="ceilidh.html">cèilidh</a>!  If you'd like to attend, show up at the
-Academy Building at 6:45pm on Friday, May 3rd.  The cost of admission is $5
-USD; for those who are registered for the full event, it's included in your
-registration package.</p>
+	<p>Youth Weekend 2013 has passed, but we hope to see you next year!</p>
