ceilidh: Now that the secret piper has been revealed, put his name on the ceilidh program.

--- a/ceilidh.html.in.in
+++ b/ceilidh.html.in.in
@@ -6,7 +6,7 @@ page).  We will have a number of acts contributed by other Youth Weekend
 participants, as well as several Scottish Country Dances.</p>
 
 	<h2>Musicians:</h2>
-	<p>Cynthia Soohoo and Maggie Hannahs</p>
+	<p>Chris Skagen, pipes; Cynthia Soohoo, piano; and Maggie Hannahs, fiddle</p>
 
 	<h2>Program:</h2>
 	<p class="crib_dropdown">Click on the name of a dance to see its
