--- a/index.html.in
+++ b/index.html.in
@@ -3,9 +3,9 @@
 	<p>Thank you all for coming!  We really enjoyed dancing with everyone
 who came!  Here's a photograph (courtesy of Jennifer Seelye) from the ball.</p>
 
-	<p><b>11 Jul 2013:</b> The 2014 event will be at Western Washington
-University in Bellingham, Wash.  Please watch this space for details as they
-become available.</p>
+	<p><b>25 Sep 2013:</b> The next Youth Weekend event will be at Western
+Washington University in Bellingham, Wash. between May 2nd and May 4th, 2014.
+Please continue to watch this space for details as they become available.</p>
 
 	<p><b>5 May 2013:</b> We had a fabulous weekend!  The crib of
 <i>Farewell to Chandi McCracken</i> has been updated to reflect what we danced,
