--- a/ceilidh.html.in.in
+++ b/ceilidh.html.in.in
@@ -13,6 +13,8 @@ participants, as well as several Scottish Country Dances.</p>
 crib sheet.  The complete crib will print on your printer.</p>
 CRIB:ceilidh.txt
 
+	<p class="noprint">[<a href="javascript:crib_toggle_all(true);">Expand All</a> | <a href="javascript:crib_toggle_all(false);">Collapse All</a>]</p>
+
 	<h2>Directions:</h2>
 	<p>The cèilidh will be at The Academy Building, 400 E. Evergreen Blvd., Vancouver, Wash:
 <!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=The+Academy+Building,+400+E.+Evergreen+Blvd.,+Vancouver,+Wash.&amp;aq=&amp;sll=37.508136,-122.213927&amp;sspn=0.1822,0.398254&amp;ie=UTF8&amp;hq=The+Academy+Building,+400+E.+Evergreen+Blvd.,+Vancouver,+Wash.&amp;hnear=&amp;radius=15000&amp;t=m&amp;ll=45.629491,-122.668222&amp;spn=0.071946,0.071946&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="460" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=The+Academy+Building,+400+E.+Evergreen+Blvd.,+Vancouver,+Wash.&amp;aq=&amp;sll=37.508136,-122.213927&amp;sspn=0.1822,0.398254&amp;ie=UTF8&amp;hq=The+Academy+Building,+400+E.+Evergreen+Blvd.,+Vancouver,+Wash.&amp;hnear=&amp;radius=15000&amp;t=m&amp;ll=45.629491,-122.668222&amp;spn=0.071946,0.071946&amp;output=embed"></iframe><![endif]-->
