Ignore output files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
 *.swp
+LinBiolinum_R.woff
+LinBiolinum_RB.woff
+LinBiolinum_RI.woff
+LinLibertine_R.woff
+LinLibertine_RB.woff
+LinLibertine_RBI.woff
+LinLibertine_RI.woff
+afterparty.html
+analytics.html
+analytics.html.in
+ball.html
+ball.html.in
+ball.html.in.d
+ceilidh.html
+ceilidh.html.in
+ceilidh.html.in.d
+classes.html
+contact.html
+feedback.html
+fonts.css
+history.html
+index.html
+register.html
+registration.csv
+schedule.html
+staff.html
+travel.html
